--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -19,9 +19,26 @@
         app_postgresql_password: "{{ lookup('password', lookup('env','HOME') + '/.credentials/' + inventory_hostname + '/apps/' + app_name + '/postgres_password length=20') }}"
 
   roles:
-    - role: consul
-    - role: loadbalancer
+    - role: clayman74.consul
+      consul_network: backend
+      consul_image: consul
+      consul_container_name: consul
+
+    - role: clayman74.loadbalancer
+      loadbalancer_image: clayman74/loadbalancer
+      loadbalancer_networks:
+        - name: backend
+
     - role: clayman74.postgresql
+      postgresql_network: backend
+      postgresql_image: postgres:9.6-alpine
+
     - role: app
       prepare: yes
       deploy: yes
+      app_name: passport
+      app_maintainer: clayman74
+      app_service_name: v1.passport
+      app_postgresql_user: passport
+      app_postgresql_database: passport
+
