--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -3,42 +3,82 @@
 - hosts: locals
   roles:
     - role: clayman74.digitalocean-provision
+      digitalocean_provision_token: "{{ lookup('env', 'DO_TOKEN') }}"
       digitalocean_provision_inventory_group: "{{ groups['cloud'] }}"
-
-    - role: app
-      build: yes
+      digitalocean_provision_ssh_key: "{{ inventory_hostname }}"
 
 
 - hosts: cloud
-  pre_tasks:
-    - name: Generage required passwords
-      set_fact:
-        postgresql_password: "{{ lookup('password', lookup('env','HOME') + '/.credentials/' + inventory_hostname + '/postgresql/password length=20') }}"
+  handlers:
+    - name: Restart loadbalancer
+      shell: docker restart {{ loadbalancer_container_name }}
+      listen: "restart loadbalancer"
 
-        app_secret_key: "{{ lookup('password', lookup('env','HOME') + '/.credentials/' + inventory_hostname + '/apps/' + app_name + '/secret_key length=20') }}"
-        app_postgresql_password: "{{ lookup('password', lookup('env','HOME') + '/.credentials/' + inventory_hostname + '/apps/' + app_name + '/postgres_password length=20') }}"
+  pre_tasks:
+    - name: Set credentials path
+      set_fact:
+        credentials_path: "{{ lookup('env','HOME') }}/.credentials/'{{ inventory_hostname }}"
+
+    - name: Generate required passwords
+      set_fact:
+        postgresql_password: "{{ lookup('password', '{{ credentials_path }}/postgresql/password length=20') }}"
+
+        app_secret_key: "{{ lookup('password', '{{ credentials_path }}/{{ app_name }}/secret_key length=20') }}"
+        app_postgresql_password: "{{ lookup('password', '{{ credentials_path }}/{{ app_name }}/postgres_password length=20') }}"
 
   roles:
     - role: clayman74.consul
-      consul_network: backend
-      consul_image: consul
-      consul_container_name: consul
 
     - role: clayman74.loadbalancer
-      loadbalancer_image: clayman74/loadbalancer
       loadbalancer_networks:
-        - name: backend
+        - name: "{{ network }}"
 
     - role: clayman74.postgresql
-      postgresql_network: backend
-      postgresql_image: postgres:9.6-alpine
 
-    - role: app
-      prepare: yes
-      deploy: yes
-      app_name: passport
-      app_maintainer: clayman74
-      app_service_name: v1.passport
-      app_postgresql_user: passport
-      app_postgresql_database: passport
+  post_tasks:
+    - name: Create app folders
+      file: path={{ item }} state=directory
+      with_items:
+        - "/etc/service/{{ app_name }}_consul_template"
+        - "/opt/projects/{{ app_name }}"
 
+    - name: Assemble app config
+      template:
+        src: "templates/config.yml.j2"
+        dest: "/opt/projects/{{ app_name }}/config.yml"
+
+    - name: Assemble consul-template config
+      template:
+        src: "templates/nginx.consul-template.conf.j2"
+        dest: "/etc/consul-templates/{{ app_name }}.conf"
+
+    - name: Assemble consul-template service file
+      template:
+        src: "templates/consul-template.service.j2"
+        dest: "/etc/service/{{ app_name }}_consul_template/run"
+        mode: "a+x"
+      notify: "restart loadbalancer"
+
+    - name: Check app db user exist
+      shell: "docker run --rm -e PGPASSWORD=\'{{ postgresql_password }}\' --net={{ postgresql_network }} {{ postgresql_image }} psql -h {{ postgresql_container_name }} -d {{ postgresql_database }} -U {{ postgresql_user }} -tAc \"SELECT 1 FROM pg_roles WHERE rolname=\'{{ app_postgresql_user }}\';\""
+      register: output
+
+    - name: Create app db user
+      shell: "docker run --rm -e PGPASSWORD=\'{{ postgresql_password }}\' --net={{ postgresql_network }} {{ postgresql_image }} psql -h {{ postgresql_container_name }} -d {{ postgresql_database }} -U {{ postgresql_user }} -c \"CREATE USER {{ app_postgresql_user }} WITH CREATEDB NOSUPERUSER PASSWORD '{{ app_postgresql_password }}';\""
+      when: output.stdout.find('1') == -1
+
+    - name: Check app db exist
+      shell: "docker run --rm -e PGPASSWORD=\'{{ postgresql_password }}\' --net={{ postgresql_network }} {{ postgresql_image }} psql -h {{ postgresql_container_name }} -d {{ postgresql_database }} -U {{ postgresql_user }} -tAc \"SELECT 1 FROM pg_database WHERE datname=\'{{ app_postgresql_database }}\';\""
+      register: output
+
+    - name: Create app db
+      shell: "docker run --rm -e PGPASSWORD=\'{{ postgresql_password }}\' --net={{ postgresql_network }} {{ postgresql_image }} psql -h {{ postgresql_container_name }} -d {{ postgresql_database }} -U {{ postgresql_user }} -c \"CREATE DATABASE {{ app_postgresql_database }} WITH OWNER {{ app_postgresql_user }};\""
+      when: output.stdout.find('1') == -1
+
+    - name: Create app network
+      docker_network:
+        name: "{{ app_network }}"
+        connected:
+          - "{{ app_consul_container_name }}"
+          - "{{ app_postgresql_container_name }}"
+        appends: yes
