--- a/.travis.yml
+++ b/.travis.yml
@@ -25,23 +25,19 @@ after_success:
   - deactivate
   - apt-get install -y sshpass
 
-  - # Install ansible
+  # Install ansible
   - pip install ansible docker-py==1.9.0 dopy==0.3.5
 
   # Check ansible version
   - ansible --version
 
   # Assemble ansible config
-  #- echo '[defaults]' > ansible.cfg
   - echo 'roles_path = .roles' >> ansible.cfg
 
   # Install ansible dependencies
   - ansible-galaxy install -r ansible/requirements.yml
 
-  # Assemble ansible config
-  #- echo '[locals]' > inventory
-  #- echo 'localhost ansible_connection=local' >> inventory
-
+  # Build image
   - ansible-playbook -i inventory ansible/build.yml
 
 notifications:
