--- a/tox.ini
+++ b/tox.ini
@@ -2,11 +2,13 @@
 envlist = py36
 
 [testenv]
+passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 deps=
     pytest
     pytest-aiohttp
     pytest-postgres
     coverage
+    coveralls
 commands=
     coverage erase
     coverage run -m py.test \
@@ -17,3 +19,4 @@ commands=
     coverage report -m
     coverage html
     coverage xml
+    coveralls
