--- a/setup.cfg
+++ b/setup.cfg
@@ -4,4 +4,9 @@ max-complexity = 10
 
 ; import-order settings
 application-import-names = passport
-import-order-style = google
+; import-order-style = google
+import-order-style = smarkets
+
+[mypy]
+python_version = 3.6
+
