--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -23,7 +23,8 @@
       set_fact:
         postgresql_password: "{{ lookup('password', '{{ credentials_path }}/postgresql/password length=20') }}"
 
-        app_secret_key: "{{ lookup('password', '{{ credentials_path }}/{{ app_name }}/secret_key length=20') }}"
+        app_sentry_dsn: "{{ lookup('file', '{{ credentials_path }}/{{ app_name }}/sentry_dsn') }}"
+        app_secret_key: "{{ lookup('password', '{{ credentials_path }}/{{ app_name }}/secret_key length=32') }}"
         app_postgresql_password: "{{ lookup('password', '{{ credentials_path }}/{{ app_name }}/postgres_password length=20') }}"
 
     - name: Install required packages
@@ -48,11 +49,18 @@
         - "/etc/service/{{ app_name }}_consul_template"
         - "/opt/projects/{{ app_name }}"
 
+    - name: Create app network
+      docker_network:
+        name: "{{ app_network }}"
+        connected:
+          - "{{ app_consul_container_name }}"
+          - "{{ app_postgresql_container_name }}"
+        appends: yes
+
     - name: Assemble app config
       template:
         src: "templates/config.yml.j2"
         dest: "/opt/projects/{{ app_name }}/config.yml"
-      notify: "restart loadbalancer"
 
     - name: Assemble consul-template config
       template:
@@ -86,11 +94,3 @@
         encoding: UTF-8
         login_host: "{{ postgresql_container_host.stdout }}"
         login_password: "{{ postgresql_password }}"
-
-    - name: Create app network
-      docker_network:
-        name: "{{ app_network }}"
-        connected:
-          - "{{ app_consul_container_name }}"
-          - "{{ app_postgresql_container_name }}"
-        appends: yes
