--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,4 @@ include MANIFEST.in
 include README.md
 include Makefile
 recursive-exclude * *.py[co]
-recursive-include conf *.tmpl *.cfg
-recursive-include passport/storage/migrations *.ini
-recursive-include passport/templates *.html
+recursive-include passport/storage/sql *.sql
