--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ script:
 
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    make build-image
-    make publish-image
+    make build-image;
+    make publish-image;
     fi
 
 notifications:
