Add prometheus metrics endpoint. Update dependencies

--- a/tox.ini
+++ b/tox.ini
@@ -1,21 +1,26 @@
+[flake8]
+max-line-length = 80
+max-complexity = 10
+
+; import-order settings
+application-import-names = passport
+; import-order-style = google
+import-order-style = smarkets
+
+[mypy]
+python_version = 3.6
+
 [tox]
 envlist = py36
 
 [testenv]
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
-deps=
-    pytest
-    pytest-aiohttp
-    pytest-postgres
-    coverage
-    coveralls
-commands=
+extras =
+    dev
+commands =
+    flake8 passport tests
     coverage erase
-    coverage run -m py.test \
-        --pg-image=postgres:alpine \
-        --pg-reuse \
-        --pg-name=db-cf2b8d1e-24d4-41a0-9e1e-88d2e4789a02 \
-        tests
+    coverage run -m py.test {posargs} tests
     coverage report -m
     coverage html
     coverage xml
