--- a/tox.ini
+++ b/tox.ini
@@ -1,23 +1,29 @@
 [flake8]
-max-line-length = 80
+max-line-length = 100
 max-complexity = 10
 
-; import-order settings
-application-import-names = passport
+application-import-names = passport, tests
 import-order-style = smarkets
+
+
+[pytest]
+python_files = tests.py test_*.py *_tests.py
+norecursedirs = .tox
+
 
 [tox]
 envlist = py37
 
 [testenv]
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
-extras =
-    dev
-commands =
-    flake8 passport tests
-    coverage erase
-    coverage run -m py.test {posargs} tests
-    coverage report -m
-    coverage html
-    coverage xml
-    coveralls
+deps = pipenv
+setenv =
+    PIPENV_VERBOSITY = -1
+
+commands=
+    pipenv install --dev
+    pipenv run flake8 passport tests
+    pipenv run coverage erase
+    pipenv run coverage run -m py.test {posargs} tests
+    pipenv run coverage report -m
+    pipenv run coverage html
