--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            python3 -m pip install tox
+            python3 -m pip install --user tox
 
       # - save_cache:
       #     paths:
