Update project structure

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,14 +1,14 @@
 .cache
 .eggs
+.idea
 .mypy_cache
 .pytest_cache
 .scannerwork
 .sonarlint
 .tox
 .vscode
-ansible
+.venv
+*.egg-info
 build
 dist
-passport.egg-info
 tests
-venv
