--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
+[bumpversion]
+current_version = 2.4.3
+commit = False
+tag = False
+parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
+
 [metadata]
 name = passport
 author = Kirill Sumorokov
