--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,24 @@
 [flake8]
-max-line-length = 100
+exclude =
+	.git,
+  .eggs,
+  .mypy_cache,
+	.tox,
+  .vscode,
+	.pytest_cache,
+	__pycache__
+max-line-length = 80
 max-complexity = 10
 
 application-import-names = passport, tests
 import-order-style = smarkets
 
-
 [pytest]
 python_files = tests.py test_*.py *_tests.py
 norecursedirs = .tox
-
+markers =
+    unit
+    integration
 
 [tox]
 envlist = py37
@@ -22,7 +31,10 @@ setenv =
 
 commands=
     pipenv install --dev
+
     pipenv run flake8 passport tests
+    pipenv run mypy passport tests
+
     pipenv run coverage erase
     pipenv run coverage run -m py.test {posargs} tests
     pipenv run coverage report -m
