--- a/tox.ini
+++ b/tox.ini
@@ -21,21 +21,20 @@ markers =
     integration
 
 [tox]
-envlist = py37
+envlist = py38
+isolated_build = True
+skipsdist = True
 
 [testenv]
 passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
-deps = pipenv
-setenv =
-    PIPENV_VERBOSITY = -1
-
+whitelist_externals = poetry
 commands=
-    pipenv install --dev
+    poetry install -v
 
-    pipenv run flake8 passport tests
-    pipenv run mypy passport tests
+    poetry run flake8 src/passport tests
+    poetry run mypy src/passport tests
 
-    pipenv run coverage erase
-    pipenv run coverage run -m py.test {posargs} tests
-    pipenv run coverage report -m
-    pipenv run coverage html
+    poetry run coverage erase
+    poetry run coverage run -m py.test {posargs} tests
+    poetry run coverage report -m
+    poetry run coverage html
