--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,12 +14,11 @@ packages = [
 
 [tool.poetry.dependencies]
 aiohttp-metrics = {git = "https://github.com/clayman74/aiohttp-metrics.git", rev = "v0.1.2"}
-aiohttp-micro = {git = "https://github.com/clayman74/aiohttp-micro.git", rev = "v0.2.1"}
-asyncpg = "^0.20.1"
-passlib = "^1.7.2"
-pyjwt = "^1.7.1"
+aiohttp-micro = {git = "https://github.com/clayman74/aiohttp-micro.git", rev = "v0.2.4"}
+asyncpg = "0.20.1"
+passlib = "1.7.2"
+pyjwt = {extras = ["crypto"], version = "1.7.1"}
 python = "^3.8"
-marshmallow = "^3.4.0"
 
 [tool.poetry.dev-dependencies]
 black = "^19.10b0"
@@ -37,3 +36,4 @@ pytest = "*"
 pytest-aiohttp = "*"
 pytest-postgres = "*"
 rope = "*"
+ipython = "^7.12.0"
