--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,7 +16,7 @@
   "python.testing.pytestEnabled": true,
   "python.testing.pytestArgs": ["tests"],
 
-  "python.pythonPath": ".venv/bin/python3.8",
+  "python.pythonPath": "${workspaceFolder}/.venv/bin/python",
   "python.autoComplete.extraPaths": [
       "${workspaceFolder}",
       "${workspaceFolder}/.venv/lib/python3.8",
