--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,9 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-aiohttp-metrics = {git = "https://github.com/clayman74/aiohttp-metrics.git", rev = "v0.1.2"}
-aiohttp-micro = {git = "https://github.com/clayman74/aiohttp-micro.git", rev = "v0.2.9"}
+aiohttp-metrics = {git = "https://github.com/clayman083/aiohttp-metrics.git", rev = "v0.1.2"}
+aiohttp-micro = {git = "https://github.com/clayman083/aiohttp-micro.git", rev = "v0.2.9"}
+aiohttp-storage = {git = "https://github.com/clayman083/aiohttp-storage.git", rev = "v0.1.0"}
 asyncpg = "0.20.1"
 passlib = "1.7.2"
 pyjwt = {extras = ["crypto"], version = "1.7.1"}
