Configure CI/CD pipeline (#7)
* Update CI/CD pipeline

* Repair test pipeline

* Bumping version from 2.5.5-alpha.1 to 2.5.5-alpha.2

* Add notifications to CI/CD pipeline

* Bumping version from 2.5.5-alpha.2 to 2.5.5

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "poetry.masonry.api"
 
 [tool.poetry]
 name = "passport"
-version = "2.5.4"
+version = "2.5.5"
 description = "User identification service"
 authors = ["Kirill Sumorokov <sumorokov.k@gmail.com>"]
 license = "MIT"
@@ -38,3 +38,6 @@ pytest-aiohttp = "*"
 pytest-postgres = "*"
 rope = "*"
 ipython = "^7.12.0"
+ansible = "^2.9.13"
+jinja2 = "^2.11.2"
+pyyaml = "^5.3.1"
