--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,9 @@
 name: Tests
 
-on:
-  push:
-    tags:
-      - '!refs/tags/*'
-    branches:
-      - '*'
+on: [push, pull_request]
 
 jobs:
-  run_tests:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -24,3 +19,12 @@ jobs:
 
       - name: Run tests
         run: tox
+
+      - name: Send notification to Telegram
+        if: always()
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT }}
+          token: ${{ secrets.TELEGRAM_SECRET }}
+          args: ${{ github.repository }} tests - ${{ job.status }}
+
