--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
       - v*
 
 jobs:
-  run_tests:
+  tests:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -23,7 +23,15 @@ jobs:
       - name: Run tests
         run: tox
 
-  publish_image:
+      - name: Send notification to Telegram
+        if: always()
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT }}
+          token: ${{ secrets.TELEGRAM_SECRET }}
+          args: ${{ github.repository }} tests for version `${{ steps.vars.outputs.tag }}` - ${{ job.status }}
+
+  publish:
     needs: [run_tests]
     runs-on: ubuntu-latest
     steps:
@@ -32,7 +40,59 @@ jobs:
       - name: Publish to Docker Repository
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: clayman083/passport
-          username: ${{ secrets.DOCKER_USER }}
-          password: ${{ secrets.DOCKER_PASS }}
+          name: ghcr.io/clayman-micro/passport
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          registry: ghcr.io
           tag_names: true
+
+      - name: Send notification to Telegram
+        if: always()
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT }}
+          token: ${{ secrets.TELEGRAM_SECRET }}
+          args: ${{ github.repository }} build image for version `${{ steps.vars.outputs.tag }}` - ${{ job.status }}
+
+  deploy:
+    needs: [publish_image]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+
+      - name: Prepare ansible config secrets
+        env:
+          SSH_KEY: ${{ secrets.SSH_KEY }}
+        run: |
+          mkdir .ssh
+          echo "$SSH_KEY" > .ssh/id_rsa
+          chmod 600 .ssh/id_rsa
+
+      - name: Prepare ansible vault password
+        env:
+          VAULT_PASSWORD: ${{ secrets.VAULT_PASSWORD  }}
+        run: |
+          echo "$VAULT_PASSWORD" > .vault_password
+          chmod 600 .vault_password
+
+      - name: Set output
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+
+      - name: Deploy new version
+        env:
+          ANSIBLE_HOST_KEY_CHECKING: False
+          ANSIBLE_VAULT_PASSWORD_FILE: .vault_password
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          PASSPORT_VERSION: ${{ steps.vars.outputs.tag }}
+        run: |
+          ansible-playbook -i ansible/inventory ansible/deploy.yml
+
+      - name: Send notification to Telegram
+        if: always()
+        uses: appleboy/telegram-action@master
+        with:
+          to: ${{ secrets.TELEGRAM_CHAT }}
+          token: ${{ secrets.TELEGRAM_SECRET }}
+          args: ${{ github.repository }} deploy version `${{ steps.vars.outputs.tag }}` - ${{ job.status }}
