--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ packages = [
 
 [tool.poetry.dependencies]
 aiohttp-metrics = {git = "https://github.com/clayman083/aiohttp-metrics.git", rev = "v0.1.2"}
-aiohttp-micro = {git = "https://github.com/clayman083/aiohttp-micro.git", rev = "v0.3.1"}
-aiohttp-storage = {git = "https://github.com/clayman083/aiohttp-storage.git", rev = "v0.1.0"}
+aiohttp-micro = {git = "https://github.com/clayman083/aiohttp-micro.git", rev = "v0.3.2"}
+aiohttp-storage = {git = "https://github.com/clayman083/aiohttp-storage.git", rev = "v0.1.1"}
 aiohttp-openapi = {git = "https://github.com/clayman083/aiohttp-openapi.git", rev = "v0.1.1"}
 passlib = "1.7.2"
 pyjwt = {extras = ["crypto"], version = "1.7.1"}
@@ -37,7 +37,7 @@ pytest = "*"
 pytest-aiohttp = "*"
 pytest-postgres = "*"
 rope = "*"
-ipython = "^7.12.0"
-ansible = "^2.9.13"
-jinja2 = "^2.11.2"
-pyyaml = "^5.3.1"
+ipython = "*"
+ansible = "*"
+jinja2 = "*"
+pyyaml = "*"
