--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,13 +11,16 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
+      - name: Set output
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+
       - uses: actions/setup-python@v1
         with:
-          python-version: '3.8'
+          python-version: '3.9'
           architecture: 'x64'
 
       - name: Install requirements
-        # Устанавливаем зависимости
         run: pip install poetry tox
 
       - name: Run tests
@@ -36,6 +39,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+
+      - name: Set output
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
 
       - name: Publish to Docker Repository
         uses: elgohr/Publish-Docker-Github-Action@master
