--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ jobs:
           args: ${{ github.repository }} tests for version `${{ steps.vars.outputs.tag }}` - ${{ job.status }}
 
   publish:
-    needs: [run_tests]
+    needs: [tests]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -62,7 +62,7 @@ jobs:
           args: ${{ github.repository }} build image for version `${{ steps.vars.outputs.tag }}` - ${{ job.status }}
 
   deploy:
-    needs: [publish_image]
+    needs: [publish]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
