Migrate to Hashicorp Vault

--- a/ansible/deploy.yml
+++ b/ansible/deploy.yml
@@ -1,5 +1,35 @@
 ---
 
+- hosts: localhost
+  tasks:
+    - name: Prepare folder for credentials
+      file:
+        path: "{{ inventory_dir }}/.credentials/{{ item }}/users/{{ hostvars[item]['ansible_user'] }}/"
+        state: directory
+        mode: 0755
+      with_items: "{{ groups['servers'] }}"
+
+    - name: Download private keys for servers
+      hashivault_read:
+        mount_point: "secrets"
+        secret: "nodes/{{ item }}/users/{{ hostvars[item]['ansible_user'] }}"
+        key: 'private_key'
+        version: 2
+      with_items: "{{ groups['servers'] }}"
+      loop_control:
+        label: "{{ item }}"
+      register: 'private_keys'
+
+    - name: Write private key to file
+      copy:
+        content: "{{ item.value }}"
+        dest: "{{ inventory_dir }}/.credentials/{{ item.item }}/users/{{ hostvars[item.item]['ansible_user'] }}/id_rsa"
+        mode: 0600
+      with_items: "{{ private_keys.results }}"
+      loop_control:
+        label: "{{ item.item }}"
+
+
 - hosts: servers
   become: true
 
@@ -12,14 +42,7 @@
     postgres_host: "postgresql.service.consul"
     postgres_port: "5432"
     postgres_user: "passport"
-    postgres_password: !vault |
-      $ANSIBLE_VAULT;1.1;AES256
-      31316231383762376437643530306238653762663839303465333234646230306462316331373966
-      3537656362346433653862373336366434633963363866300a306139633031633636346564636666
-      36333130333734616131386131346562303336326138653030613839636163323738653330353631
-      6338383135363365650a623761636137633161366130363064613832303439303865633033616631
-      36373032613866633332333631393731313766313935336162386561353664313565613233643837
-      3064396334613662363032333763306566323237306333653031
+    postgres_password: "{{ lookup('hashivault', 'services/passport', 'postgres_password', mount_point='/secrets', version=2) }}"
     postgres_database: "passport"
 
     docker_username: "{{ lookup('env','DOCKER_USERNAME') }}"
@@ -32,15 +55,10 @@
     passport_conf_dir: "{{ services_dir }}/passport/conf.d"
 
     passport_domain: "passport.{{ domain }}"
-    passport_sentry_dsn: !vault |
-      $ANSIBLE_VAULT;1.1;AES256
-      65353661356332396633653565306635393731323931656430656366643932316136373036393163
-      6161323163346164386365306238613234303030613139370a656164373937306636303838623831
-      35623930393862656437623363663839383232353566653936653038316637346463613163316333
-      6131306635386666340a343361323166316537356539313335626233326562353265636133306331
-      63343833303730303135613865313733333063343961323661396261363339303038623137303939
-      34363734346237373332326434616366613465366563373232363638396164346332643865313933
-      303937626566636133333366643165613266
+    passport_sentry_dsn: "{{ lookup('hashivault', 'services/passport', 'sentry_dsn', mount_point='/secrets', version=2) }}"
+
+    passport_jwt_private_key: "{{ lookup('hashivault', 'services/passport', 'jwt_private_key', mount_point='/secrets', version=2) }}"
+    passport_jwt_public_key: "{{ lookup('hashivault', 'services/passport', 'jwt_public_key', mount_point='/secrets', version=2) }}"
 
     passport_image: ghcr.io/clayman-micro/passport
     passport_version: "{{ lookup('env','PASSPORT_VERSION')|default('latest') }}"
@@ -49,32 +67,33 @@
 
   tasks:
     - name: Prepare service folder
-      file: path={{ item }} state=directory
+      file: path={{ item }} state=directory mode=755
       with_items:
         - "{{ passport_conf_dir }}"
 
-    - name: Generate RSA keypair for tokens
-      openssh_keypair:
-        path: "{{ passport_conf_dir }}/passport.key"
+    - name: Write JWT keys to files
+      copy:
+        content: "{{ item.content }}"
+        dest: "{{ passport_conf_dir }}/{{ item.dest }}"
+        mode: 0600
+      with_items:
+        - content: "{{ passport_jwt_private_key }}"
+          dest: passport.key
+        - content: "{{ passport_jwt_public_key }}"
+          dest: passport.key.pub
+      loop_control:
+        label: "{{ item.dest }}"
 
-    - name: Read private file
-      shell: "cat {{ passport_conf_dir }}/passport.key"
-      register: private_key
-
-    - name: Add private key to secrets
+    - name: Add JWT private key to secrets
       docker_secret:
-        name: passport_private_key
-        data: "{{ private_key.stdout }}"
+        name: passport_jwt_private_key
+        data: "{{ passport_jwt_private_key }}"
         state: present
 
-    - name: Read public file
-      shell: "cat {{ passport_conf_dir }}/passport.key.pub"
-      register: public_key
-
-    - name: Add private key to secrets
+    - name: Add JWT public key to secrets
       docker_secret:
-        name: passport_public_key
-        data: "{{ public_key.stdout }}"
+        name: passport_jwt_public_key
+        data: "{{ passport_jwt_public_key }}"
         state: present
 
     - name: Log into private registry
@@ -149,9 +168,9 @@
           - backend
         replicas: "{{ passport_replicas|default(1) }}"
         secrets:
-          - secret_name: "passport_private_key"
+          - secret_name: "passport_jwt_private_key"
             filename: "/etc/passport/passport.key"
             mode: 0600
-          - secret_name: "passport_public_key"
+          - secret_name: "passport_jwt_public_key"
             filename: "/etc/passport/passport.key.pub"
             mode: 0644
