Add linter for ansible playbook

--- a/tox.ini
+++ b/tox.ini
@@ -21,7 +21,7 @@ markers =
     integration
 
 [tox]
-envlist = py39
+envlist = lint,py39
 isolated_build = True
 skipsdist = True
 
@@ -30,10 +30,16 @@ whitelist_externals = poetry
 commands=
     poetry install -v
 
-    poetry run flake8 src/passport tests
-    poetry run mypy src/passport tests
-
     poetry run coverage erase
     poetry run coverage run -m py.test {posargs} tests
     poetry run coverage report -m
     poetry run coverage html
+
+[testenv:lint]
+whitelist_externals = poetry
+commands =
+    poetry install -v
+
+    poetry run flake8 src/passport tests
+    poetry run mypy src/passport tests
+    poetry run ansible-lint ansible/deploy.yml
