--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ pyjwt = {extras = ["crypto"], version = "1.7.1"}
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
+ansible = "^2.10.0"
+ansible-lint = "^4.3.5"
+ansible-modules-hashivault = "^4.5.6"
 black = "^19.10b0"
 coverage = "*"
 faker = "*"
@@ -38,6 +41,5 @@ pytest-aiohttp = "*"
 pytest-postgres = "*"
 rope = "*"
 ipython = "*"
-ansible = "*"
 jinja2 = "*"
 pyyaml = "*"
