--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,19 +20,19 @@ jobs:
           python-version: '3.9'
           architecture: 'x64'
 
-      - name: Install requirements
-        run: pip install poetry tox
+      # - name: Install requirements
+      #   run: pip install poetry tox
 
-      - name: Run tests
-        run: tox
+      # - name: Run tests
+      #   run: tox
 
-      - name: Send notification to Telegram
-        if: always()
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_CHAT }}
-          token: ${{ secrets.TELEGRAM_SECRET }}
-          args: ${{ github.repository }} tests for version `${{ steps.vars.outputs.tag }}` - ${{ job.status }}
+      # - name: Send notification to Telegram
+      #   if: always()
+      #   uses: appleboy/telegram-action@master
+      #   with:
+      #     to: ${{ secrets.TELEGRAM_CHAT }}
+      #     token: ${{ secrets.TELEGRAM_SECRET }}
+      #     args: ${{ github.repository }} tests for version `${{ steps.vars.outputs.tag }}` - ${{ job.status }}
 
   publish:
     needs: [tests]
@@ -96,7 +96,7 @@ jobs:
           VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
           VAULT_TOKEN: ${{ steps.vault.output.token }}
         run: |
-          ansible-playbook -i ansible/inventory ansible/deploy.yml
+          ansible-playbook -i ansible/inventory ansible/deploy.yml -e 'ansible_python_interpreter=/usr/bin/python3'
 
       - name: Send notification to Telegram
         if: always()
