--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,10 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@master
 
-      - name: Set output
-        id: vars
-        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
-
       - uses: actions/setup-python@v1
         with:
           python-version: '3.9'
@@ -26,6 +22,14 @@ jobs:
       - name: Run tests
         run: tox
 
+      - name: Set output
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+
+      - name: Set output
+        id: vars
+        run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+
       - name: Send notification to Telegram
         if: always()
         uses: appleboy/telegram-action@master
@@ -34,7 +38,7 @@ jobs:
           token: ${{ secrets.TELEGRAM_SECRET }}
           args: ${{ github.repository }} tests for version `${{ steps.vars.outputs.tag }}` - ${{ job.status }}
 
-  publish:
+  build:
     needs: [tests]
     runs-on: ubuntu-latest
     steps:
@@ -43,6 +47,18 @@ jobs:
       - name: Set output
         id: vars
         run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
+
+      - name: Import Secrets
+        id: secrets
+        uses: hashicorp/vault-action@v2.1.0
+        with:
+          url: ${{ secrets.VAULT_ADDR }}
+          method: approle
+          roleId: ${{ secrets.VAULT_ROLE_ID }}
+          secretId: ${{ secrets.VAULT_SECRET_ID }}
+          secrets: |
+              secrets/data/services/ghcr user | DOCKER_USERNAME ;
+              secrets/data/services/ghcr password | DOCKER_PASSWORD
 
       - name: Publish to Docker Repository
         uses: elgohr/Publish-Docker-Github-Action@master
@@ -59,7 +75,7 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_CHAT }}
           token: ${{ secrets.TELEGRAM_SECRET }}
-          args: ${{ github.repository }} build image for version `${{ steps.vars.outputs.tag }}` - ${{ job.status }}
+          args: ${{ github.repository }} build version `${{ steps.vars.outputs.tag }}` - ${{ job.status }}
 
   deploy:
     needs: [publish]
@@ -71,32 +87,16 @@ jobs:
         id: vars
         run: echo ::set-output name=tag::${GITHUB_REF#refs/*/}
 
-      - uses: actions/setup-python@v1
-        with:
-          python-version: '3.9'
-          architecture: 'x64'
-
-      - name: Get Vault token
-        id: vault
-        uses: clayman083/vault-token
-        with:
-          vault_addr: ${{ secrets.VAULT_ADDR }}
-          role_id: ${{ secrets.VAULT_ROLE_ID }}
-          secret_id: ${{ secrets.VAULT_SECRET_ID }}
-
-      - name: Install requirements
-        run: python3 -m pip install -q ansible==2.10.1 ansible-modules-hashivault==4.5.6
-
       - name: Deploy new version
+        id: vault
+        uses: clayman-micro/action-deploy@master
         env:
-          ANSIBLE_HOST_KEY_CHECKING: False
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          PASSPORT_VERSION: ${{ steps.vars.outputs.tag }}
           VAULT_ADDR: ${{ secrets.VAULT_ADDR }}
-          VAULT_TOKEN: ${{ steps.vault.output.token }}
-        run: |
-          ansible-playbook -i ansible/inventory ansible/deploy.yml
+          VAULT_ROLE_ID: ${{ secrets.VAULT_ROLE_ID }}
+          VAULT_SECRET_ID: ${{ secrets.VAULT_SECRET_ID }}
+          PASSPORT_VERSION: ${{ steps.vars.outputs.tag }}
+        with:
+          params: -i ansible/inventory ansible/deploy.yml
 
       - name: Send notification to Telegram
         if: always()
