Repair broken tests

--- a/tox.ini
+++ b/tox.ini
@@ -36,6 +36,7 @@ commands=
     poetry run coverage html
 
 [testenv:lint]
+basepython = python3.9
 whitelist_externals = poetry
 commands =
     poetry install -v
