--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,9 @@ pyjwt = {extras = ["crypto"], version = "1.7.1"}
 python = "^3.8"
 
 [tool.poetry.dev-dependencies]
-ansible-lint = "^4.3.5"
+ansible = "2.10.1"
+ansible-lint = "4.3.5"
+ansible-modules-hashivault = "4.5.6"
 black = "^19.10b0"
 coverage = "*"
 faker = "*"
@@ -33,6 +35,7 @@ flake8-comprehensions = "*"
 flake8-import-order = "*"
 flake8-print = "*"
 flake8-pytest = "*"
+jinja2 = "2.11.2"
 mypy = "*"
 pytest = "*"
 pytest-aiohttp = "*"
